Add search by window name feature

--- a/lupv/Resources/ui/main_window.ui
+++ b/lupv/Resources/ui/main_window.ui
@@ -512,7 +512,7 @@
           <item>
            <widget class="QTabWidget" name="tabWidget">
             <property name="currentIndex">
-             <number>0</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="suspects_tab">
              <attribute name="title">
@@ -642,7 +642,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QLineEdit" name="windows_name_widget"/>
+                   <widget class="QLineEdit" name="windows_searchkey_widget"/>
                   </item>
                   <item>
                    <widget class="QPushButton" name="windows_search_btn">
