Enable animation in TreeWidget
Higher maximum limit of spinbox

--- a/lupv/Resources/ui/main_window.ui
+++ b/lupv/Resources/ui/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1324</width>
-    <height>929</height>
+    <height>927</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -529,7 +529,7 @@
             <item>
              <widget class="QTabWidget" name="tabWidget">
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="suspects_tab">
                <attribute name="title">
@@ -554,6 +554,9 @@
                         <horstretch>0</horstretch>
                         <verstretch>0</verstretch>
                        </sizepolicy>
+                      </property>
+                      <property name="maximum">
+                       <number>10000</number>
                       </property>
                      </widget>
                     </item>
@@ -592,6 +595,9 @@
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
+                  </property>
+                  <property name="animated">
+                   <bool>true</bool>
                   </property>
                   <attribute name="headerStretchLastSection">
                    <bool>false</bool>
@@ -659,6 +665,9 @@
                   </item>
                   <item>
                    <widget class="QTreeWidget" name="windows_search_tree">
+                    <property name="animated">
+                     <bool>true</bool>
+                    </property>
                     <column>
                      <property name="text">
                       <string>Windows Name</string>
@@ -701,6 +710,9 @@
                   </item>
                   <item>
                    <widget class="QTreeWidget" name="group_by_ip_tree">
+                    <property name="animated">
+                     <bool>true</bool>
+                    </property>
                     <column>
                      <property name="text">
                       <string notr="true">IP</string>
