Refactor: replace very simple class with dict
- Change student variable name to student_dir, to avoid confusion
- Rename some function name
- Add warning and information title dialog
- Refactor student_windows to use dict instead of class
- Refactor student_ip to use dict instead of class
- Refactor suspects to use dict instead of class
- Refactor logs to use dict instead of class
- Refactor student_recodrs to use dict instead of class
- Add reason comment for calc_editdistance

--- a/Lupv/views/main.ui
+++ b/Lupv/views/main.ui
@@ -353,7 +353,7 @@
                  </size>
                 </property>
                 <property name="title">
-                 <string>GroupBox</string>
+                 <string>Auth Information</string>
                 </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_14">
                  <item>
