Change "Group by Ip Adress" to "Show all IP Addresses"
No device had the same ip

--- a/Lupv/views/main.ui
+++ b/Lupv/views/main.ui
@@ -705,7 +705,7 @@
                   <item>
                    <widget class="QPushButton" name="group_by_ip_btn">
                     <property name="text">
-                     <string>Group by IP Address</string>
+                     <string>Show all IP Addresses</string>
                     </property>
                    </widget>
                   </item>
