--- a/Lupv/views/main.ui
+++ b/Lupv/views/main.ui
@@ -119,7 +119,7 @@
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="page">
            <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -524,7 +524,7 @@
                <enum>QTabWidget::North</enum>
               </property>
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <property name="elideMode">
                <enum>Qt::ElideNone</enum>
@@ -716,7 +716,7 @@
                     </property>
                     <column>
                      <property name="text">
-                      <string notr="true">IP</string>
+                      <string notr="true">IP Address</string>
                      </property>
                     </column>
                     <column>
